tests/NormalTests/paczka1/small_fuzzy/28768176.err
Error in line 2: 3jPo1zqllj A770 92,6
Error in line 5: 3jPo1zqllj A378 45,3
Error in line 6: a7aAkVSdC A703 43,8
